psuedo path changed in input file

--- a/LAB_1/test_diamond/scf.diamond.in
+++ b/LAB_1/test_diamond/scf.diamond.in
@@ -3,7 +3,7 @@
     prefix='diamond',
     calculation = 'scf'
     restart_mode='from_scratch',
-    pseudo_dir = './pseudo/'
+    pseudo_dir = '/home/max/LabQSM/pseudo/'
     outdir = './SCRATCH'
  /
  &SYSTEM
